5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1723_2502.log
== SUBMITION (2019-05-14 10:59:57) 
-- CODE:
from math import *
# Entradas
n = int(input("Determine n"))
# Variaveis
soma = 0               # Acumulativa
i = 0                  # Contadora
sinal = -1             # Alteração do Sinal
# Laço
while (i <= n-1):
	soma = soma + sinal * 1/ ((2*i+1)*3**i) * spqr(12)
	sinal = - sinal
	i = i + 1
print(round(soma, 8))	
-- EXECUTION TIME:
0.127827
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2502/main.py", line 10, in <module>
    soma = soma + sinal * 1/ ((2*i+1)*3**i) * spqr(12)
NameError: name 'spqr' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:59:57) 
-- CODE:
from math import *
# Entradas
n = int(input("Determine n"))
# Variaveis
soma = 0               # Acumulativa
i = 0                  # Contadora
sinal = -1             # Alteração do Sinal
# Laço
while (i <= n-1):
	soma = soma + sinal * 1/ ((2*i+1)*3**i) * spqr(12)
	sinal = - sinal
	i = i + 1
print(round(soma, 8))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma = soma + sinal * 1/ ((2*i+1)*3**i) * spqr(12)
NameError: name 'spqr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:00:02) 
-- CODE:
from math import *
# Entradas
n = int(input("Determine n: "))
# Variaveis
soma = 0               # Acumulativa
i = 0                  # Contadora
sinal = -1             # Alteração do Sinal
# Laço
while (i <= n-1):
	soma = soma + sinal * 1/ ((2*i+1)*3**i) * spqr(12)
	sinal = - sinal
	i = i + 1
print(round(soma, 8))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma = soma + sinal * 1/ ((2*i+1)*3**i) * spqr(12)
NameError: name 'spqr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:00:27) 
-- CODE:
from math import *
# Entradas
n = int(input("Determine n: "))
# Variaveis
soma = 0               # Acumulativa
i = 0                  # Contadora
sinal = + 1             # Alteração do Sinal
# Laço
while (i <= n-1):
	soma = soma + sinal * 1/((2*i+1)*3**i) * spqr(12)
	sinal = - sinal
	i = i + 1
print(round(soma, 8))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma = soma + sinal * 1/((2*i+1)*3**i) * spqr(12)
NameError: name 'spqr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:00:39) 
-- CODE:
from math import *
# Entradas
n = int(input("Determine n: "))
# Variaveis
soma = 0               # Acumulativa
i = 0                  # Contadora
sinal = + 1             # Alteração do Sinal
# Laço
while (i <= n-1):
	soma = soma + sinal * 1/((2*i+1)*3**i) * sqrt(12)
	sinal = - sinal
	i = i + 1
print(round(soma, 8))	
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:00:43) 
-- CODE:
from math import *
# Entradas
n = int(input("Determine n: "))
# Variaveis
soma = 0               # Acumulativa
i = 0                  # Contadora
sinal = + 1             # Alteração do Sinal
# Laço
while (i <= n-1):
	soma = soma + sinal * 1/((2*i+1)*3**i) * sqrt(12)
	sinal = - sinal
	i = i + 1
print(round(soma, 8))	
-- EXECUTION TIME:
0.137064
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
